# cmake

./: CMakeLists.txt  Person.cpp  Person.h  PersonConfig.h  PersonConfig.h.in
MyLibrary/: CMakeLists.txt  Makefile  cmake_install.cmake
